# contract-risk-agent

./: LICENSE  README.md  README_HF.md  app.py  hf_space_requirements_check.py  requirements.txt  verify_app.py
contract-risk-agent/: .gitignore  README.md  check_cuad.py  pyproject.toml  requirements.txt
contract-risk-agent/src/: __init__.py  __main__.py
contract-risk-agent/src/data_prep/: __main__.py  chunk_contracts.py  download_cuad.py  download_cuad_backup.py
contract-risk-agent/tests/: __init__.py  test_download_cuad.py
data/processed/: cuad_chunks.parquet  cuad_embedding_metadata.parquet  cuad_embeddings.npy  cuad_labels.parquet
data/raw/: cuad_labels.parquet  queries.parquet
eval/: evaluate_retrieval.py
eval/results/: retrieval_metrics.json
src/data_prep/: chunk_contracts.py
src/embeddings/: generate_embeddings.py
src/retrieval/: retrieve.py
src/risk_analysis/: analyze_contract.py
